tests/reference/asr-continue_compilation_1-04b6d40.stderr
semantic error: Derived type `another_undefined_type` is not defined
  --> tests/errors/continue_compilation_1.f90:41:9
   |
41 |         type(another_undefined_type) :: s3_in_subroutine
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type used here is not defined in any scope

semantic error: c_char should have a length of 1
  --> tests/errors/continue_compilation_1.f90:65:9
   |
65 |         character(len=2, kind=c_char), intent(in) :: c
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'c' not defined
  --> tests/errors/continue_compilation_1.f90:63:5 - 66:20
   |
63 |        subroutine s(c) bind(c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
66 |        end subroutine s
   | ...^^^^^^^^^^^^^^^^^^^^ 

semantic error: Assumed-size '*' is only permitted in the last dimension
  --> tests/errors/continue_compilation_1.f90:79:31
   |
79 |         real, intent(in) :: a(*, 10)
   |                               ^ 

semantic error: Dummy argument 'a' not defined
  --> tests/errors/continue_compilation_1.f90:78:5 - 80:18
   |
78 |        subroutine assumed_size_star_pos_1(a)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
80 |        end subroutine
   | ...^^^^^^^^^^^^^^^^^^ 

semantic error: Assumed-size '*' is only permitted in the last dimension
  --> tests/errors/continue_compilation_1.f90:83:19
   |
83 |         real :: a(*, 10)
   |                   ^ 

semantic error: Dummy argument 'a' not defined
  --> tests/errors/continue_compilation_1.f90:82:5 - 84:18
   |
82 |        subroutine assumed_size_star_pos_2(a)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
84 |        end subroutine
   | ...^^^^^^^^^^^^^^^^^^ 

semantic error: Interface 'f_missing' is referenced but not defined
  --> tests/errors/continue_compilation_1.f90:21:9
   |
21 |         procedure(f_missing), pointer, nopass :: fn => null()
   |         ^^^^^^^^^^^^^^^^^^^^ Referenced here

semantic error: Interface 'missing_global_interface' is referenced but not defined
  --> tests/errors/continue_compilation_1.f90:24:5
   |
24 |     procedure(missing_global_interface), pointer :: p => null()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Referenced here

semantic error: Implicit typing is not allowed, enable it by using --implicit-typing 
   --> tests/errors/continue_compilation_1.f90:112:5 - 114:49
    |
112 |        implicit integer(a-f), real(e-z)
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
    |
114 |        ! Put declarations below without empty lines
    | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: arguments of `repeat` intrinsic must be scalar
   --> tests/errors/continue_compilation_1.f90:135:38
    |
135 |     character(3), parameter :: ar1 = repeat(["abc", "#^1", "123"], [1, 2, 3])
    |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Cannot convert LOGICAL to REAL
   --> tests/errors/continue_compilation_1.f90:138:20
    |
138 |     real :: adwf = .true.
    |                    ^^^^^^ 

semantic error: Symbol is already declared in the same scope
   --> tests/errors/continue_compilation_1.f90:142:31
    |
142 |     integer , dimension(3) :: array
    |                               ^^^^^ redeclaration
    |
141 |     double precision array
    |                      ~~~~~ original declaration

semantic error: Array members must me of the same type as the struct
   --> tests/errors/continue_compilation_1.f90:146:53
    |
146 |     type(MyClass), parameter :: myclass_array(2) = [1, MyClass(10)]
    |                                                     ^ 

semantic error: Initialization of `myclass_array2` must reduce to a compile time constant.
   --> tests/errors/continue_compilation_1.f90:147:66
    |
147 |     type(MyClass), parameter :: myclass_array2(2) = [MyClass(1), MyClass(q1)]
    |                                                                  ^^^^^^^^^^^ 

semantic error: Syntax error in CHARACTER declaration: only 'len' and 'kind' are allowed as type parameters
   --> tests/errors/continue_compilation_1.f90:148:5
    |
148 |     character(width=10) :: str_c_1
    |     ^^^^^^^^^^^^^^^^^^^ 

semantic error: Syntax error in CHARACTER declaration: can't use a keyword argument more than once
   --> tests/errors/continue_compilation_1.f90:149:5
    |
149 |     character(len=10, len=20) :: str_c_2
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Syntax error in CHARACTER declaration: positional type parameters cannot follow a keyword argument
   --> tests/errors/continue_compilation_1.f90:150:5
    |
150 |     character(len=10, 1) :: str_c_3
    |     ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Syntax error in CHARACTER declaration: using only 'len' keyword argument after a positional type is invalid
   --> tests/errors/continue_compilation_1.f90:151:5
    |
151 |     character(1, len=20) :: str_c_4
    |     ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Allocatable array 'x' must have a deferred shape or assumed rank
   --> tests/errors/continue_compilation_1.f90:152:34
    |
152 |     character(:), allocatable :: x(2)
    |                                  ^^^^ 

semantic error: Expecting a scalar integer or parameter annotated integer variable 
   --> tests/errors/continue_compilation_1.f90:154:26
    |
154 |     logical :: mask_size(size(arr_size))
    |                          ^^^^^^^^^^^^^^ 

semantic error: `protected` attribute is only allowed in specification part of a module
   --> tests/errors/continue_compilation_1.f90:155:5
    |
155 |     integer, protected :: protected_attr_var
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `protected` attribute is only allowed in specification part of a module
   --> tests/errors/continue_compilation_1.f90:156:5
    |
156 |     integer, parameter, protected :: protected_parameter_var
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Variable `n` cannot appear in the expression as it is not a constant
   --> tests/errors/continue_compilation_1.f90:161:27
    |
161 |       integer :: elements(n)
    |                           ^ 

semantic error: Derived type `bspline_3d` is not defined
   --> tests/errors/continue_compilation_1.f90:163:5
    |
163 |     type(bspline_3d) :: s3_in_program
    |     ^^^^^^^^^^^^^^^^ Type used here is not defined in any scope

semantic error: BOZ literal constant cannot be used in binary operations
   --> tests/errors/continue_compilation_1.f90:165:19
    |
165 |     integer::tt = b'01' * 3
    |                   ^^^^^^^^^ 

semantic error: An 'allocatable' variable cannot have an initialization expression
   --> tests/errors/continue_compilation_1.f90:167:29
    |
167 |     integer, allocatable :: allocate_int = 1
    |                             ^^^^^^^^^^^^^^^^ 

semantic error: An 'allocatable' variable cannot have an initialization expression
   --> tests/errors/continue_compilation_1.f90:168:34
    |
168 |     character(:), allocatable :: allocate_char = "H"
    |                                  ^^^^^^^^^^^^^^^^^^^ 

semantic error: The upper bound of an assumed-size array's last dimension is not defined
  --> tests/errors/continue_compilation_1.f90:73:18
   |
73 |         print *, ubound(a, 1)
   |                  ^^^^^^^^^^^^ 

semantic error: The DIM argument must be present when calling UBOUND on an assumed-size array
  --> tests/errors/continue_compilation_1.f90:74:18
   |
74 |         print *, ubound(b)
   |                  ^^^^^^^^^ 

semantic error: The upper bound of an assumed-size array's last dimension is not defined
  --> tests/errors/continue_compilation_1.f90:75:18
   |
75 |         print *, ubound(c, 2)
   |                  ^^^^^^^^^^^^ 

semantic error: Assignment to loop variable `i` is not allowed
   --> tests/errors/continue_compilation_1.f90:217:8
    |
217 |        i = i + 1
    |        ^ 

semantic error:  first argument of `maskl` must be less than or equal to the BIT_SIZE of INTEGER(KIND=4)
   --> tests/errors/continue_compilation_1.f90:221:13
    |
221 |     print*, maskl(63)
    |             ^^^^^^^^^ 

semantic error: first argument of `maskr` must be less than or equal to the BIT_SIZE of INTEGER(KIND=4)
   --> tests/errors/continue_compilation_1.f90:223:13
    |
223 |     print*, maskr(63)
    |             ^^^^^^^^^ 

semantic error: first argument of `maskl` must be nonnegative
   --> tests/errors/continue_compilation_1.f90:225:13
    |
225 |     print*, maskl(-24)
    |             ^^^^^^^^^^ 

semantic error: first argument of `maskr` must be nonnegative
   --> tests/errors/continue_compilation_1.f90:227:13
    |
227 |     print*, maskr(-24)
    |             ^^^^^^^^^^ 

semantic error: The argument `matrix_a` in `matmul` must be of type Integer, Real, Complex or Logical
   --> tests/errors/continue_compilation_1.f90:229:21
    |
229 |     print *, matmul(a1, b1)
    |                     ^^ 

semantic error: The argument `matrix_b` in `matmul` must be of type Integer, Real or Complex if first matrix is of numeric type
   --> tests/errors/continue_compilation_1.f90:231:25
    |
231 |     print *, matmul(b1, a1)
    |                         ^^ 

semantic error: The `matmul` intrinsic doesn't handle logical type yet
   --> tests/errors/continue_compilation_1.f90:233:14
    |
233 |     print *, matmul(a2, b1)
    |              ^^^^^^^^^^^^^^ 

semantic error: `matmul` accepts arrays of rank 1 or 2 only, provided an array with rank, 3
   --> tests/errors/continue_compilation_1.f90:235:21
    |
235 |     print *, matmul(a3, b1)
    |                     ^^ 

semantic error: `matmul` accepts arrays of rank 1 or 2 only, provided an array with rank, 4
   --> tests/errors/continue_compilation_1.f90:237:25
    |
237 |     print *, matmul(b1, b4)
    |                         ^^ 

semantic error: The argument `matrix_b` in `matmul` must be of rank 2, provided an array with rank, 1
   --> tests/errors/continue_compilation_1.f90:239:24
    |
239 |     print *, matmul(a, b)
    |                        ^ 

semantic error: `transpose` accepts arrays of rank 2 only, provided an array with rank, 1
   --> tests/errors/continue_compilation_1.f90:241:24
    |
241 |     print *, transpose(a)
    |                        ^ 

semantic error: Kind of all the arguments of Mergebits must be the same
   --> tests/errors/continue_compilation_1.f90:243:14
    |
243 |     print *, merge_bits(8, 12_8, 2)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Mergebits must be the same
   --> tests/errors/continue_compilation_1.f90:245:14
    |
245 |     print *, merge_bits(a5, b5, c5)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Second argument of modulo cannot be 0
   --> tests/errors/continue_compilation_1.f90:261:14
    |
261 |     print *, modulo(1, 0)
    |              ^^^^^^^^^^^^ 

semantic error: Procedure 'my_func' accepts 2 arguments, but 3 were provided
   --> tests/errors/continue_compilation_1.f90:263:5
    |
263 |     call my_func(y=1, x=2, z=1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ incorrect number of arguments to 'my_func'

semantic error: Result of `nint` overflows its kind(4)
   --> tests/errors/continue_compilation_1.f90:266:13
    |
266 |     print*, nint(1e12_8)
    |             ^^^^^^^^^^^^ 

semantic error: Result of `nint` overflows its kind(4)
   --> tests/errors/continue_compilation_1.f90:267:13
    |
267 |     print*, nint(1000000000000.0000000000000000d0)
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Invalid argument `hello` supplied
   --> tests/errors/continue_compilation_1.f90:269:5
    |
269 |     OPEN(file="numbers", hello="world")
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Cannot assign to a constant variable
   --> tests/errors/continue_compilation_1.f90:271:5
    |
271 |     i1 = 3
    |     ^^^^^^ assignment here
    |
121 |     integer, parameter :: i1 = 2
    |                           ~~~~~~ declared as constant

semantic error: Expected 0 or 1 arguments, got 2 arguments instead.
   --> tests/errors/continue_compilation_1.f90:273:5
    |
273 |     call FLUSH(1, 2)
    |     ^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `verify` intrinsic must be a scalar
   --> tests/errors/continue_compilation_1.f90:275:39
    |
275 |     print*, verify(string, set, kind= [4, 4] )
    |                                       ^^^^^^ 

semantic error: arguments of `and` intrinsic must be scalar
   --> tests/errors/continue_compilation_1.f90:276:14
    |
276 |     print *, and([1, 2, 3], [1, 2, 3])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: The shift argument of 'dshiftl' intrinsic must be less than or equal to the bit size of the integer
   --> tests/errors/continue_compilation_1.f90:278:28
    |
278 |     print *, dshiftl(1, 2, 34)
    |                            ^^ 

semantic error: The shift argument of 'dshiftl' intrinsic must be non-negative integer
   --> tests/errors/continue_compilation_1.f90:279:28
    |
279 |     print *, dshiftl(1, 2, -2)
    |                            ^^ 

semantic error: The shift argument of 'dshiftr' intrinsic must be less than or equal to the bit size of the integer
   --> tests/errors/continue_compilation_1.f90:281:28
    |
281 |     print *, dshiftr(1, 2, 34)
    |                            ^^ 

semantic error: The shift argument of 'dshiftr' intrinsic must be non-negative integer
   --> tests/errors/continue_compilation_1.f90:282:28
    |
282 |     print *, dshiftr(1, 2, -2)
    |                            ^^ 

semantic error: arguments of `selected_int_kind` intrinsic must be scalar
   --> tests/errors/continue_compilation_1.f90:284:14
    |
284 |     print *, selected_int_kind([1,2,3])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: arguments of `selected_real_kind` intrinsic must be scalar
   --> tests/errors/continue_compilation_1.f90:285:14
    |
285 |     print *, selected_real_kind([1,2,3])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: arguments of `selected_char_kind` intrinsic must be scalar
   --> tests/errors/continue_compilation_1.f90:286:14
    |
286 |     print *, selected_char_kind(['c', 'a', 'b'])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `dim` argument of the `Sum` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:295:30
    |
295 |     print *, sum(arr1, dim = 2)
    |                              ^ Must have 0 < dim <= 1 for array of rank 1

semantic error: `dim` argument of the `Sum` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:296:30
    |
296 |     print *, sum(arr1, dim = -1)
    |                              ^^ Must have 0 < dim <= 1 for array of rank 1

semantic error: `dim` argument of the `Sum` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:297:44
    |
297 |     print *, sum(arr1, mask = mask1, dim = 2)
    |                                            ^ Must have 0 < dim <= 1 for array of rank 1

semantic error: `dim` argument of the `Sum` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:298:44
    |
298 |     print *, sum(arr1, mask = mask1, dim = -1)
    |                                            ^^ Must have 0 < dim <= 1 for array of rank 1

semantic error: `dim` argument of the `Product` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:300:34
    |
300 |     print *, product(arr2, dim = 3)
    |                                  ^ Must have 0 < dim <= 2 for array of rank 2

semantic error: `dim` argument of the `Product` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:301:34
    |
301 |     print *, product(arr2, dim = -1)
    |                                  ^^ Must have 0 < dim <= 2 for array of rank 2

semantic error: `dim` argument of the `Product` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:302:48
    |
302 |     print *, product(arr2, mask = mask2, dim = 3)
    |                                                ^ Must have 0 < dim <= 2 for array of rank 2

semantic error: `dim` argument of the `Product` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:303:48
    |
303 |     print *, product(arr2, mask = mask2, dim = -1)
    |                                                ^^ Must have 0 < dim <= 2 for array of rank 2

semantic error: `dim` argument of the `Iparity` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:305:34
    |
305 |     print *, iparity(arr3, dim = 4)
    |                                  ^ Must have 0 < dim <= 3 for array of rank 3

semantic error: `dim` argument of the `Iparity` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:306:34
    |
306 |     print *, iparity(arr3, dim = -1)
    |                                  ^^ Must have 0 < dim <= 3 for array of rank 3

semantic error: `dim` argument of the `Iparity` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:307:48
    |
307 |     print *, iparity(arr3, mask = mask3, dim = 4)
    |                                                ^ Must have 0 < dim <= 3 for array of rank 3

semantic error: `dim` argument of the `Iparity` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:308:48
    |
308 |     print *, iparity(arr3, mask = mask3, dim = -1)
    |                                                ^^ Must have 0 < dim <= 3 for array of rank 3

semantic error: Expected logical expression in if statement, but recieved integer instead
   --> tests/errors/continue_compilation_1.f90:310:9
    |
310 |     if (q1) q1 = 1
    |         ^^ integer expression, expected logical

semantic error: Expected logical expression in if statement, but recieved real instead
   --> tests/errors/continue_compilation_1.f90:311:9
    |
311 |     if (r1) r1 = 1.0
    |         ^^ real expression, expected logical

semantic error: Expected logical expression in if statement, but recieved string instead
   --> tests/errors/continue_compilation_1.f90:312:9
    |
312 |     if (c1) c1 = 'a'
    |         ^^ string expression, expected logical

semantic error: The ranks of the `array` and `mask` arguments of the `Sum` intrinsic must be the same
   --> tests/errors/continue_compilation_1.f90:317:18
    |
317 |     print *, sum(arr1, mask2)
    |                  ^^^^  ^^^^^ `array` is rank 1, but `mask` is rank 2

semantic error: The ranks of the `array` and `mask` arguments of the `Sum` intrinsic must be the same
   --> tests/errors/continue_compilation_1.f90:318:18
    |
318 |     print *, sum(arr2, mask3, 2)
    |                  ^^^^  ^^^^^ `array` is rank 2, but `mask` is rank 3

semantic error: The shapes of the `array` and `mask` arguments of the `Iparity` intrinsic must be the same
   --> tests/errors/continue_compilation_1.f90:319:22
    |
319 |     print *, iparity(arr2, mask4)
    |                      ^^^^  ^^^^^ `array` has shape [2,3], but `mask` has shape [3,2]

semantic error: The shapes of the `array` and `mask` arguments of the `Iparity` intrinsic must be the same
   --> tests/errors/continue_compilation_1.f90:320:22
    |
320 |     print *, iparity(arr3, mask5, 3)
    |                      ^^^^  ^^^^^ `array` has shape [2,1,3], but `mask` has shape [2,3,1]

semantic error: Argument to 'present' must be a variable, but got an expression
   --> tests/errors/continue_compilation_1.f90:323:22
    |
323 |     print *, present(a + 1)
    |                      ^^^^^ Expected a variable here

semantic error: Argument to 'present' must be an optional dummy argument
   --> tests/errors/continue_compilation_1.f90:326:22
    |
326 |     print *, present(a)
    |                      ^ This variable is not 'optional'

semantic error: Different shape for arguments `array` and `mask` for pack intrinsic (3 and 4)
   --> tests/errors/continue_compilation_1.f90:328:30
    |
328 |     print *, pack([1, 2, 3], [.true., .true., .true., .true.])
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: reshape accepts arrays for `source` argument, found string instead.
   --> tests/errors/continue_compilation_1.f90:330:22
    |
330 |     print *, reshape("hello", [2, 3])
    |                      ^^^^^^^ 

semantic error: reshape accepts arrays for `source` argument, found logical instead.
   --> tests/errors/continue_compilation_1.f90:331:22
    |
331 |     print *, reshape(.true., [2, 3])
    |                      ^^^^^^ 

semantic error: reshape accepts arrays for `shape` argument, found string instead.
   --> tests/errors/continue_compilation_1.f90:332:36
    |
332 |     print *, reshape([1, 2, 3, 4], "hello")
    |                                    ^^^^^^^ 

semantic error: reshape accepts arrays for `shape` argument, found logical instead.
   --> tests/errors/continue_compilation_1.f90:333:36
    |
333 |     print *, reshape([1, 2, 3, 4], .false.)
    |                                    ^^^^^^^ 

semantic error: reshape accepts `source` array with size greater than or equal to size specified by `shape` array
   --> tests/errors/continue_compilation_1.f90:335:14
    |
335 |     print *, reshape([1, 2, 3, 4], [2, 3])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `shape` specifies size of 6 which exceeds the `source` array size of 4

semantic error: Division by zero
   --> tests/errors/continue_compilation_1.f90:338:14
    |
338 |     print *, 1/0
    |              ^^^ 

semantic error: Division by zero
   --> tests/errors/continue_compilation_1.f90:339:14
    |
339 |     print *, x/zero
    |              ^^^^^^ 

semantic error: Type mismatch in binary operator, the types must be compatible
   --> tests/errors/continue_compilation_1.f90:340:14
    |
340 |     print *, v**str
    |              ^  ^^^ type mismatch (real and string)

semantic error: Type mismatch in binary operator, the types must be compatible
   --> tests/errors/continue_compilation_1.f90:341:14
    |
341 |     print *, str**v
    |              ^^^  ^ type mismatch (string and real)

semantic error: The shift argument of 'shiftl' intrinsic must be less than or equal to the bit size of the integer
   --> tests/errors/continue_compilation_1.f90:343:24
    |
343 |     print *, shiftl(2, 34)
    |                        ^^ Shift value is 34, but bit size of integer is 32

semantic error: The shift argument of 'shiftl' intrinsic must be non-negative integer
   --> tests/errors/continue_compilation_1.f90:344:24
    |
344 |     print *, shiftl(2, -3)
    |                        ^^ 

semantic error: The shift argument of 'shiftr' intrinsic must be less than or equal to the bit size of the integer
   --> tests/errors/continue_compilation_1.f90:345:24
    |
345 |     print *, shiftr(2, 34)
    |                        ^^ Shift value is 34, but bit size of integer is 32

semantic error: The shift argument of 'shiftr' intrinsic must be non-negative integer
   --> tests/errors/continue_compilation_1.f90:346:24
    |
346 |     print *, shiftr(2, -3)
    |                        ^^ 

semantic error: The shift argument of 'rshift' intrinsic must be less than or equal to the bit size of the integer
   --> tests/errors/continue_compilation_1.f90:347:24
    |
347 |     print *, rshift(2, 34)
    |                        ^^ Shift value is 34, but bit size of integer is 32

semantic error: The shift argument of 'rshift' intrinsic must be non-negative integer
   --> tests/errors/continue_compilation_1.f90:348:24
    |
348 |     print *, rshift(2, -3)
    |                        ^^ 

semantic error: Input to `Sum` is expected to be numeric, but got string[:]
   --> tests/errors/continue_compilation_1.f90:350:18
    |
350 |     print *, sum([c1])
    |                  ^^^^ must be integer, real or complex type

semantic error: Input to `Product` is expected to be numeric, but got string[:]
   --> tests/errors/continue_compilation_1.f90:351:22
    |
351 |     print *, product([c1])
    |                      ^^^^ must be integer, real or complex type

semantic error: Input to `MinVal` is expected to be of integer, real or character type, but got complex[:]
   --> tests/errors/continue_compilation_1.f90:352:21
    |
352 |     print *, minval([c])
    |                     ^^^ must be integer, real or character type

semantic error: Input to `MaxVal` is expected to be of integer, real or character type, but got complex[:]
   --> tests/errors/continue_compilation_1.f90:353:21
    |
353 |     print *, maxval([c])
    |                     ^^^ must be integer, real or character type

semantic error: Argument to intrinsic `Sum` is expected to be an array, found: integer
   --> tests/errors/continue_compilation_1.f90:355:14
    |
355 |     print *, sum(q1)
    |              ^^^^^^^ 

semantic error: Argument to intrinsic `Product` is expected to be an array, found: real
   --> tests/errors/continue_compilation_1.f90:356:14
    |
356 |     print *, product(r1)
    |              ^^^^^^^^^^^ 

semantic error: Argument to intrinsic `MinVal` is expected to be an array, found: integer
   --> tests/errors/continue_compilation_1.f90:357:14
    |
357 |     print *, minval(q1)
    |              ^^^^^^^^^^ 

semantic error: Argument to intrinsic `MaxVal` is expected to be an array, found: real
   --> tests/errors/continue_compilation_1.f90:358:14
    |
358 |     print *, maxval(r1)
    |              ^^^^^^^^^^ 

semantic error: 'mask' argument of 'sum' intrinsic must be logical
   --> tests/errors/continue_compilation_1.f90:360:14
    |
360 |     print *, sum([1, 2, 3], mask = [1, 2, 3])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_1.f90:361:5
    |
361 |     z1 = y 
    |     ^^   ^ type mismatch (real and logical)

semantic error: reshape accepts arrays for `pad` argument, found integer instead.
   --> tests/errors/continue_compilation_1.f90:363:50
    |
363 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], 0)
    |                                                  ^ 

semantic error: reshape accepts arrays for `order` argument, found integer instead.
   --> tests/errors/continue_compilation_1.f90:364:55
    |
364 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], [0], 0)
    |                                                       ^ 

semantic error: `pad` argument of reshape intrinsic must have same type and kind as `source` argument, found pad type real[:] and kind 4 source type integer[:] and kind 4 instead.
   --> tests/errors/continue_compilation_1.f90:365:50
    |
365 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], [1.2])
    |                                                  ^^^^^ 

semantic error: `pad` argument of reshape intrinsic must have same type and kind as `source` argument, found pad type integer[:] and kind 8 source type integer[:] and kind 4 instead.
   --> tests/errors/continue_compilation_1.f90:366:50
    |
366 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], [0_8])
    |                                                  ^^^^^ 

semantic error: reshape accepts `order` array with integer elements
   --> tests/errors/continue_compilation_1.f90:368:58
    |
368 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], order = [1.0, 2.0])
    |                                                          ^^^^^^^^^^ 

semantic error: reshape accepts `order` array as a permutation of elements from 1 to 2
   --> tests/errors/continue_compilation_1.f90:369:58
    |
369 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], order = [2, 3])
    |                                                          ^^^^^^ 

semantic error: `mask` argument to `count` intrinsic must be a logical array
   --> tests/errors/continue_compilation_1.f90:371:20
    |
371 |     print *, count(1)
    |                    ^ 

semantic error: `mask` argument to `count` intrinsic must be a logical array
   --> tests/errors/continue_compilation_1.f90:372:20
    |
372 |     print *, count([2])
    |                    ^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_1.f90:374:5
    |
374 |     a_real = [logical::]
    |     ^^^^^^   ^^^^^^^^^^^ type mismatch (real[:] and logical[:])

semantic error: Input to `Iparity` is expected to be an integer, but got string[:]
   --> tests/errors/continue_compilation_1.f90:377:22
    |
377 |     print *, iparity(["a", "b"])
    |                      ^^^^^^^^^^ must be of integer type

semantic error: The `mask` argument to `parity` must be logical, but got string[:]
   --> tests/errors/continue_compilation_1.f90:378:21
    |
378 |     print *, parity(["a", "b"])
    |                     ^^^^^^^^^^ must be logical type

semantic error: `shape` array in reshape intrinsic should be of constant size
   --> tests/errors/continue_compilation_1.f90:381:30
    |
381 |     matrix = reshape(source, shape_, pad=[0])
    |                              ^^^^^^ not a constant size array

semantic error: Incompatible ranks 2 and 1 in assignment
   --> tests/errors/continue_compilation_1.f90:381:5
    |
381 |     matrix = reshape(source, shape_, pad=[0])
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Complex variable 'c' only has %re, %im, and %kind members, not 'mymember'
   --> tests/errors/continue_compilation_1.f90:386:14
    |
386 |     print *, c%mymember
    |              ^^^^^^^^^^ 

semantic error: Character variable 'c1' only has %len and %kind members, not 'mymember'
   --> tests/errors/continue_compilation_1.f90:388:14
    |
388 |     print *, c1%mymember
    |              ^^^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'present' intrinsic. It accepts exactly 1 arguments.
   --> tests/errors/continue_compilation_1.f90:390:14
    |
390 |     print *, present(x,x)
    |              ^^^^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'present' intrinsic. It accepts exactly 1 arguments.
   --> tests/errors/continue_compilation_1.f90:391:14
    |
391 |     print *, present()
    |              ^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'ieor' intrinsic. It accepts exactly 2 arguments.
   --> tests/errors/continue_compilation_1.f90:392:14
    |
392 |     print *, ieor(x)
    |              ^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'ieor' intrinsic. It accepts exactly 2 arguments.
   --> tests/errors/continue_compilation_1.f90:393:14
    |
393 |     print *, ieor()
    |              ^^^^^^ 

semantic error: `exit` statements cannot be outside of loops or blocks
   --> tests/errors/continue_compilation_1.f90:395:5
    |
395 |     exit
    |     ^^^^ 

semantic error: Required argument `y` at position 2 is missing in function call
   --> tests/errors/continue_compilation_1.f90:398:18
    |
398 |     call my_func(10)
    |                  ^^ 

semantic error: Required argument `x` is missing in function call
   --> tests/errors/continue_compilation_1.f90:399:5
    |
399 |     call my_func()
    |     ^^^^^^^^^^^^^^ 

semantic error: Required argument `extra_arg` is missing in function call
   --> tests/errors/continue_compilation_1.f90:403:5
    |
403 |     call obj%display()
    |     ^^^^^^^^^^^^^^^^^^ 

semantic error: Shape mismatch in `allocate` statement.
   --> tests/errors/continue_compilation_1.f90:405:14
    |
405 |     allocate(arr4(5), source=[1, 2, 3])
    |              ^^^^^^^         ^^^^^^^^^ shape mismatch in dimension 1

semantic error: Type mismatch: The `source` argument in `allocate` must have the same type as the allocated variable.
Expected type: integer[:] allocatable, but got: real.
   --> tests/errors/continue_compilation_1.f90:406:14
    |
406 |     allocate(arr4(5), source=v)
    |              ^^^^^^^         ^ incompatible types in `allocate` statement

semantic error: Dimension mismatch in `allocate` statement.
   --> tests/errors/continue_compilation_1.f90:407:14
    |
407 |     allocate(arr4(3), source=reshape([1, 2, 3, 4, 5, 6], [2, 3]))
    |              ^^^^^^^         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ mismatch in dimensions between allocated variable and `source`

semantic error: Cannot allocate an array from a scalar source.
   --> tests/errors/continue_compilation_1.f90:408:14
    |
408 |     allocate(arr4, source=7)
    |              ^^^^ allocated variable is an array, but `source` is a scalar

semantic error: Argument was not specified
   --> tests/errors/continue_compilation_1.f90:410:5
    |
410 |     call logger % add_log_file(filename=filename)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 1-th argument not specified for add_log_file

semantic error: Required argument `unit` is missing in function call
   --> tests/errors/continue_compilation_1.f90:411:5
    |
411 |     call logger % add_log_file()
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `allocate` statement only accepts four keyword arguments: `stat`, `errmsg`, `source` and `mold`
   --> tests/errors/continue_compilation_1.f90:413:5
    |
413 |     allocate(arr5, status=q1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Different `character` lengths 2 and 3 in array constructor
   --> tests/errors/continue_compilation_1.f90:416:21
    |
416 |     print *, ["aa", "aaa"]
    |                     ^^^^^ 

semantic error: The argument `mask` must be of rank 2, an array with rank 1 was provided.
   --> tests/errors/continue_compilation_1.f90:418:25
    |
418 |     print *, pack(arr2, mask1)
    |                         ^^^^^ 

semantic error: Variable protected_module_my_class_obj is PROTECTED and cannot appear in LHS of assignment
   --> tests/errors/continue_compilation_1.f90:421:5
    |
421 |     protected_module_my_class_obj%value = 42
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Invalid syntax of derived type for array constructor
   --> tests/errors/continue_compilation_1.f90:423:12
    |
423 |     arr = [type(MyClass) :: v1, v2, v3]
    |            ^^^^^^^^^^^^^ help: use just the derived type name 'myclass', without the keyword 'type'

semantic error: Class type `NonExistingType` is not defined
   --> tests/errors/continue_compilation_1.f90:425:11
    |
425 |     arr = [NonExistingType :: v1, v2, v3]
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: DATA statement element count mismatch: 8 elements on left-hand side, 10 values on right-hand side
   --> tests/errors/continue_compilation_1.f90:428:5
    |
428 |     data j2, x2, (y2(i2), i2=1,3), k2 / 1,2,3,4,5,6,7,3*8 /
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: DO loop label 'q1' already defined
   --> tests/errors/continue_compilation_1.f90:430:9 - 432:10
    |
430 |        q1: do q1 = 1, 3
    |            ^^^^^^^^^^^^...
...
    |
432 |        end do q1
    | ...^^^^^^^^^^ 

semantic error: Assigned format (using integer variable as format specifier) is not supported. Use character variables instead.
   --> tests/errors/continue_compilation_1.f90:437:5
    |
437 |     WRITE (6, fmt_i1)
    |     ^^^^^^^^^^^^^^^^^ 

semantic error: Assigned format (using integer variable as format specifier) is not supported. Use character variables instead.
   --> tests/errors/continue_compilation_1.f90:442:5
    |
442 |     print fmt_i2, "test"
    |     ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Assigned format (using integer variable as format specifier) is not supported. Use character variables instead.
   --> tests/errors/continue_compilation_1.f90:447:5
    |
447 |     read (5, fmt_i3)
    |     ^^^^^^^^^^^^^^^^ 

semantic error: `end` must be a literal integer label
 --> tests/errors/continue_compilation_1.f90:1:1
  |
1 | ! If you need a function, put it into the module below and remove the same
  | ^ 

semantic error: `end` must be a literal integer label
 --> tests/errors/continue_compilation_1.f90:1:1
  |
1 | ! If you need a function, put it into the module below and remove the same
  | ^ 

semantic error: `err` must be a literal integer label
 --> tests/errors/continue_compilation_1.f90:1:1
  |
1 | ! If you need a function, put it into the module below and remove the same
  | ^ 

semantic error: `err` must be a literal integer label
 --> tests/errors/continue_compilation_1.f90:1:1
  |
1 | ! If you need a function, put it into the module below and remove the same
  | ^ 

semantic error: `end` is only supported for READ statements
   --> tests/errors/continue_compilation_1.f90:455:5
    |
455 |     write (*, end=9014) x
    |     ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `err` is only supported for READ statements
   --> tests/errors/continue_compilation_1.f90:457:5
    |
457 |     write (*, err=9015) x
    |     ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type mismatch in argument `p`: expected a procedure but got `integer`
   --> tests/errors/continue_compilation_1.f90:460:21
    |
460 |     call proc_param(42)
    |                     ^^ 
